--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
+    "merge": "^2.1.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue-tables-3": "^2.0.1-beta05",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
